fixes logging